--- a/prototypes/editor/package.json
+++ b/prototypes/editor/package.json
@@ -3,9 +3,12 @@
     "watch": "shadow-cljs watch browser bootstrap;",
     "release": "shadow-cljs release browser bootstrap;"
   },
+  "private": true,
+  "devDependencies": {
+    "shadow-cljs": "2.18.0"
+  },
   "dependencies": {
     "react": "^17.0.0-rc.2",
-    "react-dom": "^17.0.0-rc.2",
-    "shadow-cljs": "2.11.7"
+    "react-dom": "^17.0.0-rc.2"
   }
 }
