--- a/prototypes/inspector/package.json
+++ b/prototypes/inspector/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
-    "start": "shadow-cljs watch app"
+    "start": "shadow-cljs watch browser bootstrap;",
+    "release": "shadow-cljs release browser bootstrap;"
   },
   "private": true,
   "devDependencies": {
